--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
   <head>
     <title> Брейк-Данс </title>
-    <img src="
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <h1> Брейк-Данс </h1>
