--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <title> Брейк-Данс </title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <h1> Брейк-Данс </h1>
-  <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"
+    <h1> Брейк-Данс </h1>
+  <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"/>
