--- a/index.html
+++ b/index.html
@@ -5,3 +5,10 @@
   </head>
     <h1> Брейк-Данс </h1>
   <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"/>
+  <p>
+    Брейк-данс
+Брейк-данс (англ. breakdance) — уличный танец,<p>
+сформировавшийся в Нью-Йорке в 60-х годах XX века.
+Это зрелищное направление, сочетающее в себе сложные акробатические движения
+и демонстрирующее превосходную форму танцора</p>
+
