--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p>
     Брейк-данс
 Брейк-данс (англ. breakdance) — уличный танец,<p>
-сформировавшийся в Нью-Йорке в 60-х годах XX века.
-Это зрелищное направление, сочетающее в себе сложные акробатические движения
+сформировавшийся в Нью-Йорке в 60-х годах XX века.</p>
+Это зрелищное направление, сочетающее в себе сложные акробатические движения<p>
 и демонстрирующее превосходную форму танцора</p>
 
