--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 Брейк-данс (англ. breakdance) — уличный танец,<p>
 сформировавшийся в Нью-Йорке в 60-х годах XX века.</p>
 Это зрелищное направление, сочетающее в себе сложные акробатические движения<p>
-и демонстрирующее превосходную форму танцора</p>
+и демонстрирующее превосходную форму танцора.</p>
 
