--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 сформировавшийся в Нью-Йорке в 60-х годах XX века.</p>
 Это зрелищное направление, сочетающее в себе сложные акробатические движения<p>
 и демонстрирующее превосходную форму танцора.</p>
+Брейк-Дансу можно начать в любом возросте✔)!
 
