--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"/>
   <p>
     Брейк-данс
-Брейк-данс (англ. breakdance) — уличный танец,<p>
-сформировавшийся в Нью-Йорке в 60-х годах XX века.</p>
-Это зрелищное направление, сочетающее в себе сложные акробатические движения<p>
-и демонстрирующее превосходную форму танцора.</p>
-Начать заниматься  Брейк-Дансу можно в любом возросте✔)!
- </p>
+Брейк-данс (англ. breakdance) — уличный танец,
+сформировавшийся в Нью-Йорке в 60-х годах XX века.
+Это зрелищное направление, сочетающее в себе сложные акробатические движения
+и демонстрирующее превосходную форму танцора.
+Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p>
+ 
 
