--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 Это зрелищное направление, сочетающее в себе сложные акробатические движения
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p>
+ <body>
+     <header>
+       <img src="ccылка на картинку"/>
+       <a href="ccылка">пробное занятие</a>
+       <a href="ccылка">цены</a>
+     
  
  
 
