--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <img src="ccылка на картинку"/>
        <a href="ccылка">пробное занятие</a>
        <a href="ccылка">цены</a>
-     
+     </header>
  
  
 
