--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <header>
        <img src="ccылка на картинку"/>
        <a href="ccылка">пробное занятие</a>
-       <a href="https://github.com/MIBMARBELLA/break-dance/blob/main/price.html">цены</a>
+       <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
      </header>
  
  
