--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"/>
    <header>
    <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
-   <img src="ccылка на картинку"/>
+   <img src="https://drive.google.com/file/d/1GN--O5M7kPeZWYLHFhw3MiLez8I7yRrM/view?usp=sharing"/>
    <a href="ccылка">пробное занятие</a>
   </header>
   <p>
@@ -18,7 +18,3 @@
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p>
  <body>
-     
- 
- 
-
