--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <title> Брейк-Данс </title>
     <link rel="stylesheet" href="style.css"/>
+    <img src="https://drive.google.com/file/d/1GN--O5M7kPeZWYLHFhw3MiLez8I7yRrM/view?usp=sharing/>
   </head>
     <h1> Брейк-Данс </h1>
   <img src="https://i.ytimg.com/vi/McFfi9v4RCY/maxresdefault.jpg"/>
-  <img src="https://drive.google.com/file/d/1GN--O5M7kPeZWYLHFhw3MiLez8I7yRrM/view?usp=sharing"/>
    <header>
    <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
    <a href="ccылка">пробное занятие</a>
