--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
  <body> 
+   </html>
