--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
    <a href="ccылка">пробное занятие</a>
   </header>
+  <body>
   <p>
     Брейк-данс
 Брейк-данс (англ. breakdance) — уличный танец,
@@ -16,5 +17,6 @@
 Это зрелищное направление, сочетающее в себе сложные акробатические движения
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
- <body> 
+    <img src="https://drive.google.com/file/d/1GN--O5M7kPeZWYLHFhw3MiLez8I7yRrM/view?usp=sharing"/>
+ </body> 
    </html>
