--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
     <h1> Брейк-Данс </h1>
-  <img src="https://drive.google.com/file/d/1GN--O5M7kPeZWYLHFhw3MiLez8I7yRrM/view?usp=sharing"/>
+  <img src=""/>
    <header>
    <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
    <a href="ccылка">пробное занятие</a>
