--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 Это зрелищное направление, сочетающее в себе сложные акробатические движения
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
-    <img src="https://pbs.twimg.com/media/Dnh_Zz7XsAAoEvl.jpg:large"/>
+    <img src="https://i.ytimg.com/vi/WJ2ZfiO_aI0/maxresdefault.jpg"/>
  </body> 
    </html>
