--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
     <h1> Брейк-Данс </h1>
-  <img src=""/>
+  <img src="https://i.pinimg.com/originals/a6/0f/0e/a60f0e458bfe8f0432fe58f7eb9bea43.jpg"/>
    <header>
    <a href="https://mibmarbella.github.io/break-dance/price.html">цены</a>
    <a href="ccылка">пробное занятие</a>
