--- a/masterclass.html
+++ b/masterclass.html
@@ -1,5 +1,5 @@
 <html>
 <p>
-  Купон на пробное занятие одноразовый и действует толлько по вторникам до 2222
+  Купон на пробное занятие одноразовый и действует толлько по вторникам до 2030Г
 </p>
   </html>
