--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
     <img src="https://i.ytimg.com/vi/WJ2ZfiO_aI0/maxresdefault.jpg"/>
     }
-<a href="" class="gradient-button">Button</a>
+<a href="Цены в разработке" class="gradient-button">Цены</a>
 HTML
 body {
   background: #d6eaf8;
