--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 и демонстрирующее превосходную форму танцора.
 Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
     <img src="https://i.ytimg.com/vi/WJ2ZfiO_aI0/maxresdefault.jpg"/>
-<a href="Цены в разработке" class="gradient-button">Цены</a>
+<a href="https://mibmarbella.github.io/break-dance/price.html" class="gradient-button">Цены</a>
   background: #d6eaf8;
 .gradient-button {
   text-decoration: none;
