--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
     <h1> Брейк-Данс </h1>
-  <img src="http://gl.weburg.net/00/fck/maxresdefault(2)(2).jpg"/>
+    <p>
+    Брейк-данс
+Брейк-данс (англ. breakdance) — уличный танец,
+сформировавшийся в Нью-Йорке в 60-х годах XX века.
+Это зрелищное направление, сочетающее в себе сложные акробатические движения
+и демонстрирующее превосходную форму танцора.
+Начать заниматься  Брейк-Дансу можно в любом возросте✔)!</p> 
+  <section class= "Button">
+    <article>
+     <img src="http://gl.weburg.net/00/fck/maxresdefault(2)(2).jpg"/>
+      
+      
    <header>
    <a href="ccылка">пробное занятие</a>
   </header>
   <p>
-  <body>
     Брейк-данс
 Брейк-данс (англ. breakdance) — уличный танец,
 сформировавшийся в Нью-Йорке в 60-х годах XX века.
