--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <section class= "Button">
     <article>
      <img src="http://gl.weburg.net/00/fck/maxresdefault(2)(2).jpg"/>
+      <a href="https://mibmarbella.github.io/break-dance/price.html" class="gradient-button">Пробное занятие</a>
       
       
    <header>
