--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://mibmarbella.github.io/break-dance/price.html" class="gradient-button">Цены</a>
     </article>
      <article>
-       <img src="
+       <img src="brek.jpg"/>
        
       
    <header>
