--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </article>
      <article>
        <img src="brek.jpg"/>
-       
-      
+       <a href="https://mibmarbella.github.io/break-dance/classes.html" class="gradient-button">Расписание</a>
+    </article>
+  </section>
    <header>
    <a href="ccылка">пробное занятие</a>
   </header>
