--- a/masterclass.html
+++ b/masterclass.html
@@ -1,5 +1,16 @@
 <html>
 <p>
-  Купон на пробное занятие одноразовый и действует толлько по вторникам до 2030Г
+  <table class="iksweb">
+	<tbody>
+		<tr>
+			<td>Вторник</td>
+			<td> Купон по вторникам до 2025г</td>
+		</tr>
+		<tr>
+			<td> Четверг</td>
+			<td> купон по четвергам до 2025 г</td>
+		</tr>
+	</tbody>
+</table>
 </p>
   </html>
